--- a/src/components/_shared/mainMenu/mainMenu.module.css
+++ b/src/components/_shared/mainMenu/mainMenu.module.css
@@ -1,12 +1,13 @@
 .root {
   width: auto;
   background: black;
+  padding: 16px;
 }
 
 .toggle {
   position: absolute;
-  top: 10px;
-  right: 12px;
+  top: 20px;
+  right: 20px;
   padding: 8px;
   cursor: pointer;
 }
@@ -57,12 +58,12 @@
   color: white;
 }
 
-@media screen and (min-width: 850px) {
+@media screen and (min-width: 1000px) {
   .root {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 0;
-    height: 70px;
+    padding: 48px 24px;
+    height: 64px;
     align-items: center;
   }
 
@@ -75,7 +76,7 @@
     height: auto;
     margin-right: 30px;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
   }
 
   .menu li {
@@ -83,8 +84,9 @@
   }
 
   .menu a {
-    margin-left: 64px;
-    font-size: 13px;
+    margin-left: 48px;
+    font-size: 14px;
+    font-weight: 500;
   }
   .logo {
     margin-top: 0;
