--- a/src/components/homePage/highlight.module.css
+++ b/src/components/homePage/highlight.module.css
@@ -1,13 +1,14 @@
 .root {
   padding: 40px 64px;
-  height: 800px;
 }
 
 .hlbox {
-  background: #cccccc;
   border-radius: 24px;
   width: 100%;
-  height: 100%;
+}
+
+.hlbox img {
+  width: 100%;
 }
 
 @media screen and (max-width: 850px) {
