--- a/src/components/homePage/links.module.css
+++ b/src/components/homePage/links.module.css
@@ -44,12 +44,21 @@
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 480px) {
   .root {
     flex-direction: column;
-    margin: 16px;
+    margin: 12px;
   }
+
   .item {
-    padding-bottom: 24px;
+    padding-bottom: 40px;
+  }
+
+  .item h3 {
+    margin-bottom: 12px;
+  }
+
+  .item p {
+    margin-bottom: 16px;
   }
 }
