--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,79 @@
 
 body {
   font-family: "Noto Sans", sans-serif;
-  background-color: black;
+  background-color: #0a0a0a;
+  color: white;
+  width: 100%;
+  text-align: center;
+}
+
+#root {
+  width: 1700px;
+  text-align: left;
+  margin: 0px auto;
+}
+
+h1 {
+  font-size: 64px;
+  font-weight: 700;
+  letter-spacing: 1.5px;
+  line-height: 130%;
+  margin-bottom: 64px;
+}
+
+h2 {
+  font-size: 32px;
+  font-weight: 600;
+  letter-spacing: 1.5px;
+  line-height: 130%;
+  margin-bottom: 32px;
+  margin-top: 96px;
+}
+
+.all_pages_container {
+  padding-left: 14%;
+  padding-right: 14%;
+}
+
+p {
+  font-size: 20px;
+  line-height: 200%;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  color: #a0a0a0;
+}
+
+p a {
   color: white;
 }
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 36px;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    line-height: 130%;
+    margin-bottom: 56px;
+  }
+  h2 {
+    font-size: 24px;
+    font-weight: 600;
+    letter-spacing: 1.5px;
+    line-height: 130%;
+    margin-bottom: 32px;
+    margin-top: 32px;
+  }
+  p {
+    font-size: 18px;
+    line-height: 170%;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    color: #a0a0a0;
+  }
+
+  .all_pages_container {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
