--- a/src/components/_shared/linkSection/linkSection.module.css
+++ b/src/components/_shared/linkSection/linkSection.module.css
@@ -24,27 +24,29 @@
   margin-bottom: 32px;
 }
 
-.item button {
-  display: inline-block;
-  background-color: transparent;
-  width: 180px;
-  height: 44px;
+@media screen and (max-width: 992px) {
+  .root {
+    margin: 12px;
+  }
 
-  color: #ffffff;
-  font-size: 16px;
-  letter-spacing: 0.42px;
+  .item {
+    padding-bottom: 40px;
+    padding: 16px;
+  }
 
-  border: 2px solid #ffffff;
-  border-radius: 12px;
+  .item h3 {
+    font-size: 24px;
+    margin-bottom: 4px;
+  }
 
-  transition: all 0.1s;
+  .item p {
+    font-size: 15px;
+    line-height: 28px;
+    margin-bottom: 16px;
+  }
 }
 
-.item button:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 568px) {
   .root {
     flex-direction: column;
     margin: 12px;
@@ -52,6 +54,7 @@
 
   .item {
     padding-bottom: 40px;
+    padding: 32px;
   }
 
   .item h3 {
