--- a/src/components/aboutPage/aboutPage.module.css
+++ b/src/components/aboutPage/aboutPage.module.css
@@ -23,10 +23,21 @@
 .header .item_text {
   flex-basis: 55%;
   margin-top: -20px;
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.header .item_text h1 {
+  font-size: 3.5vw;
+  margin: 0;
+  padding: 0;
+}
+
+.header .item_text p {
+  font-size: 1.3vw;
+  margin: 0;
+  padding: 0;
 }
 
 .header .buttons {
@@ -40,17 +51,43 @@
   padding: 0.75vw 0;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 1200px) {
+  .header .buttons {
+    width: 100%;
+  }
+
   .header .item_text h1 {
-    font-size: 3.5vw;
-    margin: 0;
-    padding: 0;
+    font-size: 3vw;
   }
 
   .header .item_text p {
     font-size: 1.3vw;
-    margin: 0;
-    padding: 0;
+  }
+
+  .header .item_text {
+    margin-top: -10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .mainphoto {
+    display: none;
+  }
+
+  .header {
+    display: block;
+    max-width: 600px;
+    margin: 0px auto;
+  }
+
+  .header .item_text h1 {
+    font-size: 32px;
+    margin-bottom: 24px;
+  }
+
+  .header .item_text p {
+    font-size: 16px;
+    margin-bottom: 24px;
   }
 }
 
@@ -58,11 +95,15 @@
   .header {
     padding: 32px 16px;
   }
-  .mainphoto {
-    display: none;
+
+  .header .item_text h1 {
+    font-size: 32px;
+    margin-bottom: 24px;
   }
-  .header {
-    display: block;
+
+  .header .item_text p {
+    font-size: 16px;
+    margin-bottom: 24px;
   }
 }
 
