--- a/src/components/homePage/highlight.module.css
+++ b/src/components/homePage/highlight.module.css
@@ -11,15 +11,40 @@
   width: 100%;
 }
 
-@media screen and (max-width: 850px) {
-  .root {
-    padding: 0;
-    margin-bottom: 32px;
-    height: 100vh;
-    width: 100vw;
-  }
+.m_root {
+  padding: 0;
+  margin-bottom: 32px;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+}
 
-  .hlbox {
-    border-radius: 0;
-  }
+.upper {
+  flex: 8;
+  width: 100%;
+  height: 40vh;
+  background-color: red;
+  border-radius: 6px 6px 0 0;
+}
+
+.lower {
+  flex: 2;
+  width: 100%;
+  background-color: #2a2a2a;
+  border-radius: 0 0 6px 6px;
+  padding: 16px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.lower h3 {
+  font-size: 28px;
+  font-weight: 600;
+  color: #ffffff;
+  letter-spacing: 0.8px;
+  text-decoration: none;
 }
