--- a/src/global.css
+++ b/src/global.css
@@ -11,8 +11,10 @@ body {
   background-color: #0a0a0a;
   color: white;
   width: 100%;
+  height: 100%;
   text-align: center;
   border: none;
+  margin: 0;
 }
 
 #root {
@@ -20,6 +22,12 @@ body {
   text-align: left;
   margin: 0px auto;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+#body_content {
+  flex: 1 0 auto;
 }
 
 h1 {
