--- a/src/components/_shared/infoItem/infoItem.module.css
+++ b/src/components/_shared/infoItem/infoItem.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 32px 0;
+  padding: 32px 0 0 0;
 }
 
 .title {
@@ -13,11 +13,17 @@
   line-height: 34px;
 }
 
-.body {
+.body,
+.body p {
   width: 100%;
   font-size: 16px;
-  color: #ffffff;
+  color: #eeeeee;
   line-height: 34px;
+}
+
+.body p {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 @media screen and (max-width: 992px) {
