case page styles update

--- a/src/components/_shared/infoItem/infoItem.module.css
+++ b/src/components/_shared/infoItem/infoItem.module.css
@@ -26,6 +26,11 @@
   padding-bottom: 0;
 }
 
+.body li {
+  margin-bottom: 16px;
+  line-height: 30px;
+}
+
 @media screen and (max-width: 992px) {
   .item {
     flex-direction: column;
