--- a/src/components/studyPage/studyPage.module.css
+++ b/src/components/studyPage/studyPage.module.css
@@ -1,6 +1,10 @@
 .root {
 }
 
+.imgSeparator {
+  width: 100vw;
+}
+
 .header {
   width: 100%;
   height: 650px;
@@ -23,4 +27,17 @@
 .content {
   margin-top: 96px;
   margin-bottom: 96px;
+}
+
+.imgSeparator {
+  width: 100%;
+  padding-bottom: 45%;
+  height: 0;
+}
+
+.imgSeparator img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
 }
