--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: "Noto Sans", sans-serif;
-  background-color: #0a0a0a;
+  background-color: #111111;
   color: white;
   width: 100%;
   height: 100%;
