--- a/src/components/_shared/infoItem/infoItem.module.css
+++ b/src/components/_shared/infoItem/infoItem.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 32px 0 0 0;
+  padding-bottom: 48px;
 }
 
 .title {
