--- a/src/components/homePage/highlight.module.css
+++ b/src/components/homePage/highlight.module.css
@@ -1,5 +1,6 @@
 .root {
   padding: 40px 64px;
+  margin-bottom: 24px;
 }
 
 .hlbox {
@@ -23,28 +24,36 @@
 
 .upper {
   flex: 8;
-  width: 100%;
   height: 40vh;
-  background-color: red;
-  border-radius: 6px 6px 0 0;
+  border-radius: 16px;
+  margin: 16px;
+  background-position: 83% 0%;
 }
 
 .lower {
   flex: 2;
   width: 100%;
-  background-color: #2a2a2a;
-  border-radius: 0 0 6px 6px;
-  padding: 16px;
+  padding: 0 16px;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .lower h3 {
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 600;
   color: #ffffff;
   letter-spacing: 0.8px;
   text-decoration: none;
+}
+
+.svgimg {
+  z-index: 100;
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  max-height: 100%;
+  padding: 40px 64px;
 }
