--- a/src/components/homePage/highlight.module.css
+++ b/src/components/homePage/highlight.module.css
@@ -33,7 +33,7 @@
 .lower {
   flex: 2;
   width: 100%;
-  padding: 0 16px;
+  padding: 32px 16px 0px 16px;
 
   display: flex;
   flex-direction: column;
@@ -44,8 +44,9 @@
   font-size: 24px;
   font-weight: 600;
   color: #ffffff;
-  letter-spacing: 0.8px;
+  letter-spacing: 0.4px;
   text-decoration: none;
+  padding-bottom: 24px;
 }
 
 .svgimg {
