mobile - case page

--- a/src/components/_shared/galleryView/galleryView.module.css
+++ b/src/components/_shared/galleryView/galleryView.module.css
@@ -11,3 +11,10 @@
   cursor: pointer;
   flex: 0 0 40%;
 }
+
+@media screen and (max-width: 480px) {
+  .root img {
+    margin-bottom: 20px;
+    width: 100%;
+  }
+}
