--- a/src/components/_shared/tags/tags.module.css
+++ b/src/components/_shared/tags/tags.module.css
@@ -3,10 +3,6 @@
   margin-bottom: 16px;
 }
 
-.small {
-  margin-bottom: 12px;
-}
-
 .root > div {
   border: 2px rgba(255, 255, 255, 0.4) solid;
   background-color: rgba(255, 255, 255, 0.03);
@@ -17,8 +13,14 @@
   color: white;
 }
 
-.small > div {
-  padding: 4px 12px;
-  font-size: 12px;
-  margin-right: 12px;
+@media screen and (max-width: 480px) {
+  .root {
+    margin-bottom: 12px;
+  }
+
+  .root > div {
+    padding: 4px 12px;
+    font-size: 12px;
+    margin-right: 12px;
+  }
 }
