--- a/src/components/aboutPage/aboutPage.module.css
+++ b/src/components/aboutPage/aboutPage.module.css
@@ -109,6 +109,10 @@
     font-size: 16px;
     margin-bottom: 24px;
   }
+
+  .content {
+    margin: 0;
+  }
 }
 
 @media screen and (min-width: 1600px) {
