--- a/src/components/homePage/highlight.module.css
+++ b/src/components/homePage/highlight.module.css
@@ -6,6 +6,7 @@
 .hlbox {
   border-radius: 24px;
   width: 100%;
+  position: relative;
 }
 
 .hlbox img {
@@ -19,7 +20,6 @@
   left: 0;
   max-width: 100%;
   max-height: 100%;
-  padding: 40px 64px;
 }
 
 .m_root {
