--- a/src/components/allStudiesPage/allStudiesPage.module.css
+++ b/src/components/allStudiesPage/allStudiesPage.module.css
@@ -11,10 +11,16 @@
   display: flex;
 }
 
-
-
 @media screen and (max-width: 992px) {
   .filterlinks {
     display: none;
   }
+}
+.example-appear {
+  opacity: 0.01;
+}
+
+.example-appear.example-appear-active {
+  opacity: 1;
+  transition: opacity 0.5s ease-in;
 }
