--- a/src/components/_shared/infoItem/infoItem.module.css
+++ b/src/components/_shared/infoItem/infoItem.module.css
@@ -43,7 +43,8 @@
     line-height: 32px;
   }
 
-  .body {
+  .body,
+  .body p {
     width: 100%;
     font-size: 16px;
     color: #ffffff;
@@ -51,7 +52,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 568px) {
   .item {
     list-style-position: inside;
   }
