--- a/src/components/_shared/mainMenu/mainMenu.module.css
+++ b/src/components/_shared/mainMenu/mainMenu.module.css
@@ -21,7 +21,7 @@
   display: inline-block;
   font-size: 22px;
   margin-top: 10px;
-  margin-left: 20px;
+  margin-left: 12px;
   text-decoration: none;
 }
 
@@ -89,5 +89,10 @@
   }
   .logo {
     margin-top: 0;
+    color: white;
+    display: inline-block;
+    font-size: 22px;
+    margin-left: 20px;
+    text-decoration: none;
   }
 }
