--- a/src/components/aboutPage/aboutPage.module.css
+++ b/src/components/aboutPage/aboutPage.module.css
@@ -95,7 +95,12 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 568px) {
+  .root {
+    padding-top: 80px;
+    padding-bottom: 40px;
+  }
+
   .header {
     padding: 32px 16px;
   }
@@ -106,7 +111,8 @@
   }
 
   .header .item_text p {
-    font-size: 16px;
+    font-size: 18px;
+    line-height: 170%;
     margin-bottom: 24px;
   }
 
