--- a/src/components/allStudiesPage/allStudiesPage.module.css
+++ b/src/components/allStudiesPage/allStudiesPage.module.css
@@ -24,3 +24,10 @@
   opacity: 1;
   transition: opacity 0.5s ease-in;
 }
+
+@media screen and (max-width: 568px) {
+  .root {
+    padding-top: 80px;
+    padding-bottom: 40px;
+  }
+}
