--- a/src/components/textPage/textPage.module.css
+++ b/src/components/textPage/textPage.module.css
@@ -6,3 +6,10 @@
 .root p {
   margin-bottom: 32px;
 }
+
+@media screen and (max-width: 568px) {
+  .root {
+    padding-top: 80px;
+    padding-bottom: 40px;
+  }
+}
