--- a/src/global.css
+++ b/src/global.css
@@ -108,22 +108,10 @@ p a {
   }
 }
 
-.page-enter {
-  opacity: 0;
-  transform: scale(1.1);
-}
-
-/* .page-enter-active {
-  opacity: 1;
-  transform: scale(1);
-  transition: opacity 30000ms, transform 30000ms;
-} */
-
-.page-exit {
-  transform: scale(2);
-}
-
-.page-exit-active {
-  transform: scale(0.9);
-  transition: opacity 3000ms, transform 3000ms;
+a,
+a:hover,
+a:active,
+a:visited,
+a:focus {
+  text-decoration: none;
 }
