--- a/src/components/studyPage/separatorImg.module.css
+++ b/src/components/studyPage/separatorImg.module.css
@@ -4,19 +4,14 @@
 
 .root img {
   height: 100%;
+  max-width: 100vw;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-@media screen and (max-width: 480px) {
-
+@media screen and (max-width: 568px) {
   .root {
     display: none;
   }
-
-}
-
-@media screen and (max-width: 480px) {
-
 }
