--- a/src/global.css
+++ b/src/global.css
@@ -64,10 +64,18 @@ p a {
   color: white;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1200px) {
   .all_pages_container {
     padding-left: 7%;
     padding-right: 7%;
+  }
+  h1 {
+    font-size: 40px;
+    margin-bottom: 32px;
+  }
+  h2 {
+    font-size: 28px;
+    margin-top: 32px;
   }
 }
 
@@ -78,7 +86,7 @@ p a {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 568px) {
   h1 {
     font-size: 36px;
     font-weight: 700;
