--- a/src/components/_shared/galleryView/galleryView.module.css
+++ b/src/components/_shared/galleryView/galleryView.module.css
@@ -8,20 +8,30 @@
 .root img {
   margin-bottom: 80px;
   border-radius: 10px;
+  margin-right: 24px;
   cursor: pointer;
   flex: 0 0 40%;
 }
 
+@media screen and (max-width: 1400px) {
+  .root img {
+    width: 50%;
+    margin-bottom: 48px;
+  }
+}
+
 @media screen and (max-width: 1200px) {
   .root img {
-    flex: 0 0 80%;
+    width: 80%;
   }
 }
 
 @media screen and (max-width: 480px) {
+  .root {
+    width: 100%;
+  }
   .root img {
     margin-top: 8px;
     margin-bottom: 20px;
-    width: 100%;
   }
 }
