--- a/src/components/aboutPage/aboutPage.module.css
+++ b/src/components/aboutPage/aboutPage.module.css
@@ -73,7 +73,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
   .mainphoto {
     display: none;
   }
@@ -82,6 +82,7 @@
     display: block;
     max-width: 600px;
     margin: 0px auto;
+    padding: 0;
   }
 
   .header .item_text h1 {
