--- a/src/components/allStudiesPage/allStudiesPage.module.css
+++ b/src/components/allStudiesPage/allStudiesPage.module.css
@@ -15,14 +15,9 @@
   .filterlinks {
     display: none;
   }
-}
-.example-appear {
-  opacity: 0.01;
-}
-
-.example-appear.example-appear-active {
-  opacity: 1;
-  transition: opacity 0.5s ease-in;
+  .title {
+    padding-bottom: 20px;
+  }
 }
 
 @media screen and (max-width: 568px) {
